--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,5 @@
-.vscode/
-.vscodeignore
-test/
-src/
-bin/
-typings/
-dist/testPrinter.*
+.vscode
+test
+src
 .gitattributes
 .gitignore
-gulpfile.js
-tsconfig.json
-tslint.json
-test_files/
-ide/
-lua*-env/
