--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "type": "git",
     "url": "https://github.com/arnoson/lua-format"
   },
-  "type": "module",
   "main": "dist/index.js",
   "typings": "dist/index.d.js",
   "scripts": {
     "dev": "rollup --config --watch",
+    "dev-runner": "nodemon -r esbuild-register src/testPrinter.ts",
     "build": "rollup --config --environment BUILD:production"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
+    "@types/jest": "^27.0.3",
+    "esbuild-jest": "^0.5.0",
+    "esbuild-register": "^3.2.0",
+    "jest": "^27.3.1",
+    "nodemon": "^2.0.15",
     "rollup": "^2.60.1",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-esbuild": "^4.7.2"
